Verify that Tash Host still is among the controllable processes

--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -129,6 +129,9 @@
   <data name="CouldNotMakeTashRegistration" xml:space="preserve">
     <value>Could not make Tash registration (error code: {0})</value>
   </data>
+  <data name="TashHostNoLongerAmongTashProcesses" xml:space="preserve">
+    <value>Tash Host is no longer among Tash's controllable processes</value>
+  </data>
   <data name="TashHostWindowTitle" xml:space="preserve">
     <value>Tash Host</value>
   </data>
